--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.21.2",
+    "next": "~16.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0"
@@ -20,6 +21,7 @@
     "@nx/eslint": "22.3.3",
     "@nx/eslint-plugin": "22.3.3",
     "@nx/js": "22.3.3",
+    "@nx/next": "^22.3.3",
     "@nx/node": "22.3.3",
     "@nx/playwright": "22.3.3",
     "@nx/react": "22.3.3",
@@ -43,6 +45,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "4.0.9",
+    "autoprefixer": "10.4.13",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -55,8 +58,10 @@
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.3.3",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "supertest": "^7.1.4",
+    "tailwindcss": "3.4.3",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
@@ -68,6 +73,8 @@
     "apps/*",
     "libs/api/products",
     "libs/shared/*",
-    "libs/shop/*"
+    "libs/shop/*",
+    "web",
+    "ui"
   ]
 }
