refartor(#24): 전체적인 nx 구조 개선

--- a/libs/ui/tsconfig.lib.json
+++ b/libs/ui/tsconfig.lib.json
@@ -8,5 +8,5 @@
     "jsx": "react-jsx",
     "lib": ["dom", "esnext"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "../../apps/web/src/app/main/LayoutPage.tsx", "../../apps/web/src/app/main/joined/TeamJoined.tsx", "../../apps/web/src/app/main/join/TeamJoin.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
