--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -26,7 +26,7 @@
     "src/**/*.jsx",
     ".next/types/**/*.ts",
     "next-env.d.ts"
-  ],
+, "../../libs/ui/src/lib/ServerProfilePage.tsx"  ],
   "exclude": [
     "out-tsc",
     "dist",
