--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -11,7 +11,12 @@
       "import": "./src/index.ts",
       "default": "./src/index.ts"
     },
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./assets": {
+      "types": "./src/assets/index.ts",
+      "import": "./src/assets/index.ts",
+      "default": "./src/assets/index.ts"
+    }
   },
   "dependencies": {}
 }
