refactor(#38): Server/Client 컴포넌트 분리로 assets 오용 방지

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,8 @@
     "target": "es2022",
     "strict": true,
     "paths": {
-      "@meezy/ui": ["libs/ui/src/index.ts"]
+      "@meezy/ui": ["libs/ui/src/index.ts"],
+      "@meezy/ui/assets": ["libs/ui/src/assets/index.client.ts"]
     }
   }
 }
