--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^1.13.5",
     "express": "^4.21.2",
     "next": "~16.0.1",
     "react": "19.0.0",
