feat(#45): api 설정

--- a/libs/shop/data/tsconfig.lib.json
+++ b/libs/shop/data/tsconfig.lib.json
@@ -4,11 +4,13 @@
     "outDir": "dist",
     "types": [
       "node",
+      "vite/client",
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts"
     ],
     "rootDir": "src",
     "jsx": "react-jsx",
+    "composite": true,
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo"
   },
   "exclude": [
