--- a/libs/shared/models/tsconfig.lib.json
+++ b/libs/shared/models/tsconfig.lib.json
@@ -5,6 +5,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
+    "composite": true,
     "emitDeclarationOnly": true,
     "module": "nodenext",
     "moduleResolution": "nodenext",
