--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,7 +7,8 @@
     "strict": true,
     "paths": {
       "@meezy/ui": ["libs/ui/src/index.ts"],
-      "@meezy/ui/client": ["libs/ui/src/client.ts"]
+      "@meezy/ui/client": ["libs/ui/src/client.ts"],
+      "@org/shop-data": ["libs/shop/data/src/index.ts"]
     }
   }
 }
